--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 
 
-NEXT_PUBLIC_SITE_URL=https://seo-for-hire.vercel.app/
+NEXT_PUBLIC_SITE_URL=https://www.mikewire-electrical.co.uk
 
 
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://www.mikewire-electrical.co.uk
 
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=ljjzp4v9
