--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^5.6.0",
     "next": "^12.3.0",
     "next-sanity": "^0.8.4",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "npm": "^8.18.0",
     "prop-types": "^15.8.0",
