--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-portable-text": "^0.4.3",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "clsx": "^1.2.0",
+    "@headlessui/react": "^1.6.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
