--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test-all": "npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
     "@sanity/image-url": "^1.0.1",
+    "clsx": "^1.2.0",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.6.0",
     "next": "^12.3.0",
@@ -25,10 +27,9 @@
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.5",
     "react-portable-text": "^0.4.3",
-    "sass": "^1.45.1",
-    "clsx": "^1.2.0",
-    "@headlessui/react": "^1.6.5"
+    "sass": "^1.45.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
