add after interactive hook

--- a/.env
+++ b/.env
@@ -3,7 +3,11 @@
 NEXT_PUBLIC_SITE_URL=https://www.mikewire-electrical.co.uk
 
 
-NEXT_PUBLIC_API_URL=http://www.mikewire-electrical.co.uk
-
+NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=ljjzp4v9
+
+user=mikewire@hotmail.com
+pass=20Birleystreet
+
+
