--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@sanity/image-url": "^1.0.1",
+    "axios": "^1.1.2",
     "clsx": "^1.2.0",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.6.0",
@@ -28,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.5",
+    "react-hook-form": "^7.37.0",
     "react-portable-text": "^0.4.3",
     "sass": "^1.45.1"
   },
