--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 NEXT_PUBLIC_SITE_URL=https://www.mikewire-electrical.co.uk
 
 
-NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk
+
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=ljjzp4v9
 
@@ -11,3 +11,10 @@ user=mikewire@hotmail.com
 pass=20Birleystreet
 
 
+
+
+user=mikewire@hotmail.com
+pass=20Birleystreet
+
+
+NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk/
