--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test-all": "npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.5",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.2",
     "clsx": "^1.2.0",
@@ -31,7 +30,8 @@
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.37.0",
     "react-portable-text": "^0.4.3",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "@headlessui/react": "^1.6.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
