--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.37.0",
     "react-portable-text": "^0.4.3",
     "sass": "^1.45.1",
-    "@headlessui/react": "^1.6.2"
+    "@headlessui/react": "^1.6.2",
+    "@heroicons/react": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
