header and sanity for services

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test-all": "npm run check-format && npm run check-lint && npm run build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.2",
+    "@heroicons/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.2",
     "clsx": "^1.2.0",
@@ -30,9 +32,8 @@
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.37.0",
     "react-portable-text": "^0.4.3",
-    "sass": "^1.45.1",
-    "@headlessui/react": "^1.6.2",
-    "@heroicons/react": "^1.0.6"
+    "react-scroll": "^1.8.7",
+    "sass": "^1.45.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
