--- a/.env
+++ b/.env
@@ -8,13 +8,13 @@ NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=ljjzp4v9
 
 user=mikewire@hotmail.com
-pass=20Birleystreet
+pass=20Birleystreet!
 
 
 
 
 user=mikewire@hotmail.com
-pass=20Birleystreet
+pass=20Birleystreet!
 
 
 NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk/
