--- a/.env
+++ b/.env
@@ -13,8 +13,6 @@ pass=20Birleystreet!
 
 
 
-user=mikewire@hotmail.com
-pass=20Birleystreet!
 
 
-NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk/
+NEXT_PUBLIC_API_URL=https://www.mikewire-electrical.co.uk
