--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.2",
-    "clsx": "^1.2.0",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.6.0",
     "next": "^12.3.0",
     "next-sanity": "^0.8.4",
-    "nodemailer": "^6.7.8",
+    "nodemailer": "^6.9.8",
     "nodemon": "^2.0.19",
     "npm": "^8.18.0",
     "prop-types": "^15.8.0",
@@ -32,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.37.0",
+    "react-hot-toast": "^2.4.1",
     "react-portable-text": "^0.4.3",
     "react-scroll": "^1.8.7",
     "sass": "^1.45.1"
