--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.2",
+    "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.6.0",
     "next": "^12.3.0",
