--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.6.0",
-    "next": "^12.3.0",
+    "next": "^13.5.6",
     "next-sanity": "^0.8.4",
     "nodemailer": "^6.9.8",
     "nodemon": "^2.0.19",
@@ -47,7 +47,7 @@
     "autoprefixer": "^10.4.1",
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "postcss": "^8.4.6",
